Fix button collapse on small screen

--- a/vemama/static/css/master.css
+++ b/vemama/static/css/master.css
@@ -15,3 +15,7 @@ body {
     background-color: white;
     padding: 15px;
 }
+
+.btn {
+    margin-bottom: .2rem;
+}
